# brace

./: .gitignore  Cargo.toml  README.md  migrations.toml
.github/workflows/: ci.yml
deepgram-rust-sdk/: Cargo.toml
src/: main.rs  self_update.rs
