[package]
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"
name = "brace"
publish = false
rust-version = "1.72"
version = "0.1.0"

[dependencies]
async-openai = "0.23"
byteorder = "1"
bytes = "1"
cpal = "0.15"
crossbeam = "0.8"
# eframe = {version = "0.28.1", default-features = false, features = ["default_fonts", "glow", "persistence"]}
egui = "0.28.1"
egui-tetra2 = "0.5.1"
egui_extras = {version = "0.28.1", features = ["image"]}
egui_node_graph2 = "0.6"
ehttp = "0.5"
env_logger = "0.11"
futures = "0.3"
hound = "3"
image = {version = "0.25", default-features = false, features = ["jpeg", "png"]}
log = "0.4"
once_cell = "1"
poll-promise = {version = "0.3", default-features = false}
regex = "1"
reqwest = "0.12"
rfd = "0.14"
serde = {version = "1.0.196", features = ["derive"]}
serde_json = "1"
stream-cancel = "0.8"
tetra = {version = "0.8", features = ["sdl2_bundled"]}
tiktoken-rs = "0.5.9"
tokio = {version = "1", features = ["full"]}
tracked = "0.5"
turbosql = "0.11"

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true

[patch.crates-io]
# eframe = {git = "https://github.com/trevyn/egui", branch = "multiclick-text-select"}
egui = {git = "https://github.com/trevyn/egui", branch = "multiclick-text-select"}
egui_extras = {git = "https://github.com/trevyn/egui", branch = "multiclick-text-select"}
tetra = {git = "https://github.com/17cupsofcoffee/tetra", branch = "main"}
